userAdd - done
