# src/main/resources/static/openApi.yaml
@@ -16,7 +16,7 @@ tags:
     description: "Will be used to Auth user"
 
 paths:
-  /api/v1/users:
+  /api/v1/user:
     post:
       tags:
         - "User"
@@ -69,7 +69,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorModel"
 
-  /api/v1/users/{login}:
+  /api/v1/user/{login}:
     get:
       tags:
         - "User"
@@ -184,7 +184,7 @@ paths:
   #       maybe need to add bad credentials exception and status
 
 
-  /api/v1/{login}/messages:
+  /api/v1/user/{login}/messages:
     post:
       tags:
         - "Message"
@@ -244,7 +244,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorModel"
 
-  /api/v1/{login}/messages/{id}:
+  /api/v1/user/{login}/messages/{id}:
     put:
       tags:
         - "Message"
@@ -354,7 +354,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorModel"
-  /api/v1/allmesages:
+  /api/v1/allmessages:
     get:
       tags:
         - "Message"
@@ -516,6 +516,3 @@ components:
         - errorId
         - message
         - status
-#externalDocs:
-#  description: "Find out data of response"
-#  url: "http://swagger.io"
